stack-UserData.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Este stack va a crear 
  una instancia de EC2
  y todo lo que necesita


Parameters:
  VpcIdParameter:
    Type: String
  KeyPairParameter:
    Type: String
  AmiIdParameter:
    Type: String
  Environment:
    Type: String
    AllowedValues:
      - prod
      - staging
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t3.micro
      - t3.small
      - t2.micro
    Description: El tipo de instancia a crear

Outputs:
  IdInstancia:
    Description: Id de la instancia creada
    Value:
      Ref: WebService

Resources:
  WebService:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId:
        Ref: AmiIdParameter
      KeyName: 
        Ref: KeyPairParameter
      InstanceType: 
        Ref:  InstanceTypeParameter
      SecurityGroupIds:
        - Ref: SecurityGroupSSH
      UserData: IyEvYmluL2Jhc2gKCnN1ZG8gYXB0IHVwZGF0ZQpzdWRvIGFwdCBpbnN0YWxsIG5naW54IC15CgplY2hvICdob2xhIERpb2NsZXh2aWFuJyB8IHN1ZG8gdGVlIC91c3Ivc2hhcmUvbmdpbngvaHRtbC9pbmRleC5odG1sCgo=

  SecurityGroupSSH:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "security group ssh access stack prueba 01"
      VpcId:
        Ref: VpcIdParameter
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIP: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1 
          FromPort: 0
          ToPort: 0
          CidrIP: 0.0.0.0/0
  SecurityGroupIngressProd:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Access from everywhere networks
      FromPort: 80
      IpProtocol: tcp
      ToPort: 80
      GroupID: !Ref SecurityGroupSSH
